tekton/os/force-pull-of-images.yaml
apiVersion: v1
kind: Pod
metadata:
  name: force-pull
spec:
  containers:
  - name: force-pull-base
    imagePullPolicy: Always
    image: image-registry.openshift-image-registry.svc.cluster.local:5000/default/ace-minimal:13.0.1.0-alpine
    command: ["sleep"]
    args: ["100"]
  - name: force-pull-build
    imagePullPolicy: Always
    image: image-registry.openshift-image-registry.svc.cluster.local:5000/default/ace-minimal-build:13.0.1.0-alpine
    command: ["sleep"]
    args: ["100"]
  restartPolicy: Never
