tekton/os/tea-tekton-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tea-route
spec:
  host: tea-route-default.apps.openshift.mycompany.com
  to:
    kind: Service
    name: tea-tekton-service
    weight: 100
  port:
    targetPort: 7800
  wildcardPolicy: None
